e cambiado el disenio de todos lo botones de color negro

--- a/app/templates/aportes/form.html
+++ b/app/templates/aportes/form.html
@@ -39,6 +39,6 @@
 		</div>
 	</div>
     <div class="btn btn-primary mt-6">
-			<button type="submit" class="btn btn-primary w-full">Guardar</button>
+			<button type="submit" class="btn btn-success w-full">Guardar</button>
 	</div>
 </form>
