--- a/app/templates/inicio.html
+++ b/app/templates/inicio.html
@@ -77,7 +77,7 @@
         </div>
         <div class="h-4"></div>
         <div class="justify-start card-actions mt-auto">
-          <a href="/aportes" class="btn btn-primary w-full">Ver aportes</a>
+          <a href="/aportes" class="btn btn-success w-full">Ver aportes</a>
         </div>
       </div>
     </div>
