--- a/app/templates/inscripciones/form.html
+++ b/app/templates/inscripciones/form.html
@@ -36,6 +36,6 @@
   </div>
 
   <div class="mt-8">
-    <button type="submit" class="btn btn-primary w-full">Guardar</button>
+    <button type="submit" class="btn btn-success w-full">Guardar</button>
   </div>
 </form>
