--- a/app/templates/participantes/index.html
+++ b/app/templates/participantes/index.html
@@ -41,7 +41,7 @@
   <h2 class="my-8 text-2xl font-semibold">Vista general</h2>
   <div>
     <button
-      class="btn btn-primary btn-lg"
+      class="btn btn-success btn-lg"
       data-ref="{{ url_for('participantes.crear') }}"
     >
       Agregar
