--- a/app/templates/cursos_talleres/index.html
+++ b/app/templates/cursos_talleres/index.html
@@ -23,7 +23,7 @@
   <h2 class="my-8 text-2xl font-semibold">Vista general</h2>
   <div class="mb-2">
     <button
-      class="btn btn-primary btn-lg"
+      class="btn btn-success btn-lg"
       data-ref="{{ url_for('cursos_talleres.crear') }}"
     >
       Agregar
