--- a/app/templates/periodos/index.html
+++ b/app/templates/periodos/index.html
@@ -22,7 +22,7 @@
   <h2 class="my-8 text-2xl font-semibold">Vista general</h2>
   <div class="mb-2">
     <button
-      class="btn btn-primary btn-lg"
+      class="btn btn-success btn-lg"
       data-ref="{{ url_for('periodos.crear') }}"
     >
       Agregar
