--- a/app/templates/tutores/form.html
+++ b/app/templates/tutores/form.html
@@ -119,7 +119,7 @@
         <button type="button" class="btn btn-ghost" onclick="history.back()">
           Cancelar
         </button>
-        <button type="submit" class="btn btn-primary">
+        <button type="submit" class="btn btn-success">
           {% if tutor %}Actualizar{% else %}Crear{% endif %}
         </button>
       </div>
