--- a/app/templates/voluntarios/form.html
+++ b/app/templates/voluntarios/form.html
@@ -55,6 +55,6 @@
   </div>
 
   <div class="btn btn-primary mt-6">
-    <button type="submit" class="btn btn-primary w-full">Guardar</button>
+    <button type="submit" class="btn btn-success w-full">Guardar</button>
   </div>
 </form>
